@@ -5,9 +5,12 @@
   * optimize setrange() C-function by using memset
   * fix issue #74, bitarray is hashable on Python 2
   * fix issue #68, unittest.TestCase.assert_ deprecated
-  * improved test suite - tests should run in about 1 second now
+  * improved test suite - tests should run in about 1 second
   * update documentation to use positional-only syntax in docstrings
   * update readme to pass Python 3 doctest
+  * add example with helper requested functions
+  * add example which shows how to convert integers (potentially extremely
+    large with many hundred digits) to and from bitarrays
 
 
 2019-07-19   1.0.1:
